_httpd_deployment_example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: httpd
spec:
  selector:
    app: httpd-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
